--- a/RealKernel/RealKernel.vcxproj
+++ b/RealKernel/RealKernel.vcxproj
@@ -20,31 +20,46 @@
     <ClCompile Include="source\bios\disk.cpp" />
     <ClCompile Include="source\bios\keyboard.cpp" />
     <ClCompile Include="source\bios\video.cpp" />
+    <ClCompile Include="source\file_system\directory.cpp" />
+    <ClCompile Include="source\file_system\file.cpp" />
+    <ClCompile Include="source\io\disk.cpp" />
+    <ClCompile Include="source\io\disk_cache.cpp" />
     <ClCompile Include="source\kernel_main.cpp" />
+    <ClCompile Include="source\std\arr.cpp" />
     <ClCompile Include="source\system\apm.cpp" />
+    <ClCompile Include="source\ui\commands\dir_command.cpp" />
     <ClCompile Include="source\ui\commands\echo_command.cpp" />
     <ClCompile Include="source\ui\commands\exit_command.cpp" />
     <ClCompile Include="source\ui\commands\help_command.cpp" />
+    <ClCompile Include="source\ui\commands\read_command.cpp" />
     <ClCompile Include="source\ui\console.cpp" />
     <ClCompile Include="source\ui\shell.cpp" />
-    <ClCompile Include="source\lib\str_tools.cpp" />
+    <ClCompile Include="source\std\str.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\bios\keyboard_codes.h" />
+    <ClInclude Include="source\file_system\directory.h" />
+    <ClInclude Include="source\file_system\file.h" />
+    <ClInclude Include="source\file_system\file_data.h" />
+    <ClInclude Include="source\file_system\file_system.h" />
+    <ClInclude Include="source\io\disk.h" />
+    <ClInclude Include="source\io\disk_cache.h" />
+    <ClInclude Include="source\std\arr.h" />
+    <ClInclude Include="source\std\errors.h" />
+    <ClInclude Include="source\ui\commands\dir_command.h" />
     <ClInclude Include="source\ui\commands\echo_command.h" />
     <ClInclude Include="source\ui\commands\exit_command.h" />
     <ClInclude Include="source\ui\commands\help_command.h" />
+    <ClInclude Include="source\ui\commands\read_command.h" />
     <ClInclude Include="source\ui\shell.h" />
     <ClInclude Include="source\ui\shell_command.h" />
     <ClInclude Include="source\system\apm.h" />
-    <ClInclude Include="source\system\interrupt_vector_table.h" />
     <ClInclude Include="source\ui\console.h" />
     <ClInclude Include="source\bios\disk.h" />
     <ClInclude Include="source\bios\keyboard.h" />
     <ClInclude Include="source\bios\video.h" />
-    <ClInclude Include="source\system\interrupts.h" />
-    <ClInclude Include="source\lib\str_tools.h" />
-    <ClInclude Include="source\stdint.h" />
+    <ClInclude Include="source\std\str.h" />
+    <ClInclude Include="source\std\inta.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{0E11A7AA-56AF-4170-A618-70064629D2E6}</ProjectGuid>
